crates/oxc_react_compiler/tests/snapshots/dominator.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/dominator.js
---
function Component(props) {
	let x = 0;
	bb0: if (props.a) {
		x = 1;
	} else {
		if (props.b) {} else {
			break bb0;
		}
		x = 3;
	}
	bb1: bb2: switch (props.c) {
		case "a": {
			x = 4;
			break bb2;
		}
		case "b": {
			break bb1;
		}
		case "c":
		default: {
			x = 6;
		}
	}
	if (props.d) {
		return null;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
