crates/oxc_react_compiler/tests/snapshots/dont-memoize-primitive-function-call-non-escaping-useMemo.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/dont-memoize-primitive-function-call-non-escaping-useMemo.js
---
// @compilationMode:"infer" @enablePreserveExistingMemoizationGuarantees @validatePreserveExistingMemoizationGuarantees
import { useMemo } from "react";
import { makeObject_Primitives, ValidateMemoization } from "shared-runtime";
function Component(props) {
	const result = makeObject(props.value).value + 1;
	console.log(result);
	return "ok";
}
function makeObject(value) {
	console.log(value);
	return { value };
}
export const TODO_FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 42 }],
	sequentialRenders: [
		{ value: 42 },
		{ value: 42 },
		{ value: 3.14 },
		{ value: 3.14 },
		{ value: 42 },
		{ value: 3.14 },
		{ value: 42 },
		{ value: 3.14 }
	]
};
