crates/oxc_react_compiler/tests/snapshots/drop-methodcall-usememo.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/drop-methodcall-usememo.js
---
import { c as _c } from "react/compiler-runtime";
import * as React from "react";
function Component(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.value) {
		x = [];
		x.push(props.value);
		$[0] = props.value;
		$[1] = x;
	} else {
		x = $[1];
	}
	const x_0 = x;
	return x_0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 42 }]
};
