crates/oxc_react_compiler/tests/snapshots/duplicate-named-function-expression-names.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/duplicate-named-function-expression-names.tsx
---
import { c as _c } from "react/compiler-runtime";
export function Component(t0) {
	const $ = _c(2);
	const { value } = t0;
	let t1;
	if ($[0] !== value) {
		const columns = [{ render: function Render(input) {
			const copy = input;
			return copy + value;
		} }, { render: function Render(input_0) {
			const copy_0 = input_0;
			return copy_0 + value;
		} }];
		t1 = <div>{columns}</div>;
		$[0] = value;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
