crates/oxc_react_compiler/tests/snapshots/dynamic-import-options.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/dynamic-import-options.js
---
import { c as _c } from "react/compiler-runtime";
function loadModule(name, options) {
	const $ = _c(3);
	let t0;
	if ($[0] !== name || $[1] !== options) {
		t0 = import(name, options);
		$[0] = name;
		$[1] = options;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
}
function loadSource(name) {
	const $ = _c(2);
	let t0;
	if ($[0] !== name) {
		t0 = import.source(name);
		$[0] = name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
function loadDeferred(name) {
	const $ = _c(2);
	let t0;
	if ($[0] !== name) {
		t0 = import.defer(name);
		$[0] = name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
function loadWebpackChunk() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = import(
			/* webpackChunkName: "settings" */
			"./settings"
);
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function loadViteUrl(url) {
	const $ = _c(2);
	let t0;
	if ($[0] !== url) {
		t0 = import(
			/* @vite-ignore */
			url
);
		$[0] = url;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
